added search functionality with route

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,12 @@
         </li>
       </ul>
     </div>
+    <form action="/search" class="input-group col-5">
+      <input type="search" name="term" class="form-control rounded" placeholder="Find a Customer" aria-label="Search"
+        aria-describedby="search-addon" />
+      <button type="submit" class="btn btn-primary">search</button>
+    </form>
+
   </nav>
 
 </div>
