--- a/templates/best_customers.html
+++ b/templates/best_customers.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
-{% block title %}Customers{% endblock %}
+{% block title %}Best Customers{% endblock %}
 {% block content %}
 
 <a class="btn btn-primary" style="float: right" href="/add/">Add a Customer</a>
 
 <h1>Customers</h1>
 
-<ul style="column-count: 4">
+<ol style="column-count: 4">
   {% for customer in customers %}
   <li>
     <a href="/{{ customer.id }}/">
@@ -14,6 +14,6 @@
     </a>
   </li>
   {% endfor %}
-</ul>
+</ol>
 
 {% endblock %}
